feat(lexer): create a basic lexer for Tiger
First working lexer for the Tiger language:
* Make use of `ocamllex` to generate a lexer
* Tokens are stored in `tokens.ml`
* Add a rule to automatically generate `lexer.ml` with dune
* Locations are represented by a pair of positions and are stored inside each kind of token
* Handle lexical specifications of the Tiger language

--- a/lib/dune
+++ b/lib/dune
@@ -1,2 +1,9 @@
+(rule
+ (target lexer.ml)
+ (deps lexer.mll)
+ (action
+  (run ocamllex -o %{target} %{deps})))
+
 (library
- (name tcml))
+ (name tcml)
+ (modules tokens lexer context))
